# pjy-claude-skill

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
plugins/harness/: plugin.json
plugins/harness/docs/: usage-guide.md
plugins/harness/skills/harness-design/: SKILL.md
plugins/harness/skills/harness-design-workspace/iteration-1/: benchmark.json  benchmark.md
plugins/harness/skills/harness-design-workspace/iteration-2/: benchmark.json  benchmark.md
plugins/harness/skills/harness-design/evals/: README.md  evals.json
plugins/harness/skills/harness-design/references/: 01-claude-md.md  02-permissions.md  03-hooks.md  04-mcp.md  05-subagent.md  06-evolution.md
plugins/kicad/: plugin.json
plugins/kicad/agents/: kicad-bom-generator.md  kicad-pcb-analyzer.md  kicad-schematic-designer.md  kicad-schematic-reviewer.md
plugins/kicad/claude-md/: CLAUDE.md
plugins/kicad/docs/: usage-guide.md
plugins/kicad/skills/kicad-analyze/: SKILL.md
plugins/kicad/skills/kicad-design/: SKILL.md
plugins/kicad/skills/kicad-review/: SKILL.md
plugins/kicad/skills/kicad-setup/: SKILL.md
plugins/manual/: plugin.json
plugins/manual-digest/: plugin.json
plugins/manual-digest/docs/: USAGE_GUIDE.md  usage.md
plugins/manual-digest/skills/manual-digest/: SKILL.md
plugins/manual-digest/skills/manual-digest-setup/: SKILL.md
plugins/manual/agents/: manual-reviewer.md  manual-writer.md  sphinx-manual-writer.md  windows-manual-writer.md
plugins/manual/claude-md/: CLAUDE.md
plugins/manual/docs/: USAGE_GUIDE.md
plugins/manual/skills/manual-build/: SKILL.md
plugins/manual/skills/manual-review/: SKILL.md
plugins/manual/skills/manual-setup/: SKILL.md
plugins/manual/skills/manual-write/: SKILL.md
plugins/parallel-delegation/: plugin.json
plugins/parallel-delegation/agents/: pd-implementer.md  pd-tester.md  pd-verifier.md
plugins/parallel-delegation/docs/: usage-guide.md
plugins/parallel-delegation/skills/parallel-delegation/: SKILL.md
plugins/parallel-delegation/skills/parallel-delegation-setup/: SKILL.md
plugins/react-vite/: plugin.json
plugins/react-vite/agents/: react-vite-fluent-ui-expert.md  react-vite-fluent-ui-qa-expert.md  react-vite-program-expert.md  react-vite-qa-expert.md  react-vite-shadcn-ui-expert.md  react-vite-shadcn-ui-qa-expert.md
plugins/react-vite/claude-md/: CLAUDE.md
plugins/react-vite/docs/: usage-guide.md
plugins/react-vite/skills/react-vite-frontend/: SKILL.md
plugins/react-vite/skills/react-vite-setup/: SKILL.md
plugins/stm32f4/: plugin.json
plugins/stm32f4/agents/: kicad-stm32-checker.md  stm32f4-code-reviewer.md  stm32f4-qa.md  stm32f4-test-writer.md
plugins/stm32f4/claude-md/: CLAUDE.md
plugins/stm32f4/docs/: USAGE_GUIDE.md
plugins/stm32f4/skills/kicad-stm32-review/: SKILL.md
plugins/stm32f4/skills/stm32f4-build/: SKILL.md
plugins/stm32f4/skills/stm32f4-firmware/: SKILL.md
plugins/stm32f4/skills/stm32f4-setup/: SKILL.md
plugins/stm32f4/skills/stm32f4-tdd/: SKILL.md
plugins/vivado/: plugin.json
plugins/vivado/agents/: kicad-xdc-gen.md  pin-reviewer.md  rtl-designer.md  rtl-reviewer.md  tb-reviewer.md  timing-analyst.md
plugins/vivado/claude-md/: CLAUDE.md
plugins/vivado/docs/: README.md  Vivado-스킬-에이전트-사용가이드.md
plugins/vivado/skills/kicad-review/: SKILL.md
plugins/vivado/skills/kicad-xdc/: SKILL.md  gen_xdc_from_netlist.py  net_patterns.json
plugins/vivado/skills/pin-review/: SKILL.md
plugins/vivado/skills/rtl-review/: SKILL.md
plugins/vivado/skills/tb-review/: SKILL.md
plugins/vivado/skills/vivado-bitstream/: SKILL.md  run_bit.tcl
plugins/vivado/skills/vivado-build-all/: SKILL.md
plugins/vivado/skills/vivado-gui/: SKILL.md
plugins/vivado/skills/vivado-impl/: SKILL.md  run_impl.tcl
plugins/vivado/skills/vivado-project/: SKILL.md  boards.json
plugins/vivado/skills/vivado-setup/: SKILL.md
plugins/vivado/skills/vivado-sim/: SKILL.md  tb_template.v
plugins/vivado/skills/vivado-synth/: SKILL.md  run_synth.tcl
plugins/vivado/templates/constraints/: arty_a7.xdc
plugins/vivado/templates/rtl/: top.v  uart_tx.v
plugins/vivado/templates/scripts/: open_gui.sh  open_hw_manager.tcl  open_waveform.tcl  program_fpga.tcl  run_sim.sh
plugins/vivado/templates/tb/: tb_uart_tx.v
plugins/wmx3md/: plugin.json
plugins/wmx3md/agents/: wmx3-build-checker.md  wmx3-code-generator.md  wmx3-code-reviewer.md  wmx3-doc-writer.md  wmx3-module-designer.md  wmx3-test-writer.md
plugins/wmx3md/claude-md/: CLAUDE.md
plugins/wmx3md/docs/: USAGE_GUIDE.md
plugins/wmx3md/skills/wmx3-build/: SKILL.md
plugins/wmx3md/skills/wmx3-code-review/: SKILL.md
plugins/wmx3md/skills/wmx3-deploy/: SKILL.md
plugins/wmx3md/skills/wmx3-docs/: SKILL.md
plugins/wmx3md/skills/wmx3-module-add-api/: SKILL.md
plugins/wmx3md/skills/wmx3-module-create/: SKILL.md
plugins/wmx3md/skills/wmx3-module-create/assets/templates/: CMakeLists.txt  CMakePresets.json  build_lin.sh  build_win.bat  deploy.sh
plugins/wmx3md/skills/wmx3-module-create/assets/templates/include/: {{MODULE_NAME}}Api.h  {{MODULE_NAME}}ApiDef.h  {{MODULE_NAME}}ApiLocal.h  {{MODULE_NAME}}ApiPub.h
plugins/wmx3md/skills/wmx3-module-create/assets/templates/test/: CMakeLists.txt  mock_{{MODULE_NAME}}.h  test_{{MODULE_NAME}}_Funcs.cpp
plugins/wmx3md/skills/wmx3-module-create/assets/templates/{{MODULE_NAME}}/: CMakeLists.txt  Makefile  export  {{MODULE_NAME}}.c  {{MODULE_NAME}}.h  {{MODULE_NAME}}_Event.c  {{MODULE_NAME}}_Event.h  {{MODULE_NAME}}_Funcs.c  {{MODULE_NAME}}_Funcs.h  {{MODULE_NAME}}_Motion.c  {{MODULE_NAME}}_PubFuncs.c  {{MODULE_NAME}}_PubFuncs.h  {{MODULE_NAME}}_Util.c  {{MODULE_NAME}}_Util.h
plugins/wmx3md/skills/wmx3-module-create/assets/templates/{{MODULE_NAME}}Api/: CMakeLists.txt  Makefile  {{MODULE_NAME}}Api.cpp  {{MODULE_NAME}}ApiTypes.cpp  {{MODULE_NAME}}ApiUtil.cpp  {{MODULE_NAME}}ApiUtil.h  {{MODULE_NAME}}Api_ApiLog.cpp  {{MODULE_NAME}}Api_ApiLog.h  {{MODULE_NAME}}Api_Event.cpp
plugins/wmx3md/skills/wmx3-setup/: SKILL.md
plugins/wmx3md/skills/wmx3-tdd/: SKILL.md
(+51 files in other folders)
